PXEPR-247    fix height on mobile

--- a/src/common/ui/navigation/navigation.component.scss
+++ b/src/common/ui/navigation/navigation.component.scss
@@ -27,6 +27,9 @@
 	@include media-breakpoint-up(md) {
 		top: ( ( $header-height / 2 ) + ( $menu-toggle-line-width-rotate - ( $logo-height-tablet / 2 ) ) + ( $spacer * .75 ) );
 	}
+	@include media-breakpoint-down(lg) {
+		max-height: calc( 100vh - ( ( ( #{$header-height} / 2 ) + ( #{$menu-toggle-line-width-rotate} - ( #{$logo-height-mobile} / 2 ) ) + ( #{$spacer} * .75 ) ) + 30px ));
+	}
 	@include media-breakpoint-up(lg) {
 		position: fixed;
 		display: block;
